# simple_gui

./: Cargo.toml
res/: calculator-light.css
src/: main.rs
